tests/algorithms/x/Java/data_structures/binary_tree/floor_and_ceiling.error
compile: exit status 1
/tmp/TestJavaTranspiler_Algorithms_Golden182_floor_and_ceiling490816736/001/Main.java:55: error: incompatible types: int cannot be converted to BigInteger
            tree = ((Node[])(new Node[]{new Node(10, 1, 2), new Node(5, 3, 4), new Node(20, 5, 6), new Node(3, (java.math.BigInteger.valueOf(1)).negate(), (java.math.BigInteger.valueOf(1)).negate()), new Node(7, (java.math.BigInteger.valueOf(1)).negate(), (java.math.BigInteger.valueOf(1)).negate()), new Node(15, (java.math.BigInteger.valueOf(1)).negate(), (java.math.BigInteger.valueOf(1)).negate()), new Node(25, (java.math.BigInteger.valueOf(1)).negate(), (java.math.BigInteger.valueOf(1)).negate())}));
                                                 ^
/tmp/TestJavaTranspiler_Algorithms_Golden182_floor_and_ceiling490816736/001/Main.java:55: error: incompatible types: int cannot be converted to BigInteger
            tree = ((Node[])(new Node[]{new Node(10, 1, 2), new Node(5, 3, 4), new Node(20, 5, 6), new Node(3, (java.math.BigInteger.valueOf(1)).negate(), (java.math.BigInteger.valueOf(1)).negate()), new Node(7, (java.math.BigInteger.valueOf(1)).negate(), (java.math.BigInteger.valueOf(1)).negate()), new Node(15, (java.math.BigInteger.valueOf(1)).negate(), (java.math.BigInteger.valueOf(1)).negate()), new Node(25, (java.math.BigInteger.valueOf(1)).negate(), (java.math.BigInteger.valueOf(1)).negate())}));
                                                                     ^
/tmp/TestJavaTranspiler_Algorithms_Golden182_floor_and_ceiling490816736/001/Main.java:55: error: incompatible types: int cannot be converted to BigInteger
            tree = ((Node[])(new Node[]{new Node(10, 1, 2), new Node(5, 3, 4), new Node(20, 5, 6), new Node(3, (java.math.BigInteger.valueOf(1)).negate(), (java.math.BigInteger.valueOf(1)).negate()), new Node(7, (java.math.BigInteger.valueOf(1)).negate(), (java.math.BigInteger.valueOf(1)).negate()), new Node(15, (java.math.BigInteger.valueOf(1)).negate(), (java.math.BigInteger.valueOf(1)).negate()), new Node(25, (java.math.BigInteger.valueOf(1)).negate(), (java.math.BigInteger.valueOf(1)).negate())}));
                                                                                        ^
/tmp/TestJavaTranspiler_Algorithms_Golden182_floor_and_ceiling490816736/001/Main.java:55: error: incompatible types: int cannot be converted to BigInteger
            tree = ((Node[])(new Node[]{new Node(10, 1, 2), new Node(5, 3, 4), new Node(20, 5, 6), new Node(3, (java.math.BigInteger.valueOf(1)).negate(), (java.math.BigInteger.valueOf(1)).negate()), new Node(7, (java.math.BigInteger.valueOf(1)).negate(), (java.math.BigInteger.valueOf(1)).negate()), new Node(15, (java.math.BigInteger.valueOf(1)).negate(), (java.math.BigInteger.valueOf(1)).negate()), new Node(25, (java.math.BigInteger.valueOf(1)).negate(), (java.math.BigInteger.valueOf(1)).negate())}));
                                                                                                            ^
/tmp/TestJavaTranspiler_Algorithms_Golden182_floor_and_ceiling490816736/001/Main.java:55: error: incompatible types: int cannot be converted to BigInteger
            tree = ((Node[])(new Node[]{new Node(10, 1, 2), new Node(5, 3, 4), new Node(20, 5, 6), new Node(3, (java.math.BigInteger.valueOf(1)).negate(), (java.math.BigInteger.valueOf(1)).negate()), new Node(7, (java.math.BigInteger.valueOf(1)).negate(), (java.math.BigInteger.valueOf(1)).negate()), new Node(15, (java.math.BigInteger.valueOf(1)).negate(), (java.math.BigInteger.valueOf(1)).negate()), new Node(25, (java.math.BigInteger.valueOf(1)).negate(), (java.math.BigInteger.valueOf(1)).negate())}));
                                                                                                                                                                                                                 ^
/tmp/TestJavaTranspiler_Algorithms_Golden182_floor_and_ceiling490816736/001/Main.java:55: error: incompatible types: int cannot be converted to BigInteger
            tree = ((Node[])(new Node[]{new Node(10, 1, 2), new Node(5, 3, 4), new Node(20, 5, 6), new Node(3, (java.math.BigInteger.valueOf(1)).negate(), (java.math.BigInteger.valueOf(1)).negate()), new Node(7, (java.math.BigInteger.valueOf(1)).negate(), (java.math.BigInteger.valueOf(1)).negate()), new Node(15, (java.math.BigInteger.valueOf(1)).negate(), (java.math.BigInteger.valueOf(1)).negate()), new Node(25, (java.math.BigInteger.valueOf(1)).negate(), (java.math.BigInteger.valueOf(1)).negate())}));
                                                                                                                                                                                                                                                                                                                      ^
/tmp/TestJavaTranspiler_Algorithms_Golden182_floor_and_ceiling490816736/001/Main.java:55: error: incompatible types: int cannot be converted to BigInteger
            tree = ((Node[])(new Node[]{new Node(10, 1, 2), new Node(5, 3, 4), new Node(20, 5, 6), new Node(3, (java.math.BigInteger.valueOf(1)).negate(), (java.math.BigInteger.valueOf(1)).negate()), new Node(7, (java.math.BigInteger.valueOf(1)).negate(), (java.math.BigInteger.valueOf(1)).negate()), new Node(15, (java.math.BigInteger.valueOf(1)).negate(), (java.math.BigInteger.valueOf(1)).negate()), new Node(25, (java.math.BigInteger.valueOf(1)).negate(), (java.math.BigInteger.valueOf(1)).negate())}));
                                                                                                                                                                                                                                                                                                                                                                                                                            ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
7 errors
